Fix: changed relationship fields and update doc
